--- a/app/assets/stylesheets/pages/user/edit.scss
+++ b/app/assets/stylesheets/pages/user/edit.scss
@@ -7,8 +7,22 @@
    flex-wrap: wrap;
 }
 
+.edit-profil-btn{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+
+  
+}
+
+.container{
+  max-width: none !important;
+}
+
 .tab {
    overflow: hidden;
+   margin-bottom: 20px;
 
  }
  
