--- a/app/views/users/_edit_info.html.erb
+++ b/app/views/users/_edit_info.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" >
    <p class="card-title"> Profil </p>
    <p class="card-icon"> <i class="fa-solid fa-pen-to-square" ></i> </p>
    <%= form_with(model: user, local: true) do |form| %>
@@ -14,61 +14,60 @@
          </div>
       <% end %>
 
-      <div class="user-info_wrapper">
-         <div class="input">
-            <p class="input-name">Email </p>
-            <div class="input-wrapper">
-            <%= form.text_field :email, autofocus: true%>
-            <i class="fa-solid fa-user"></i>
+      <div class="container" style="margin:0 !important">
+         <div class="row">
+            <div class="input col-sm">
+               <p class="input-name">Email </p>
+               <div class="input-wrapper">
+               <%= form.text_field :email%>
+               <i class="fa-solid fa-user"></i>
+               </div> 
+            </div>
+
+            <div class="input col-sm">
+               <p class="input-name">First name</p>
+               <div class="input-wrapper">
+               <%= form.text_field :first_name%>
+               <i class="fa-solid fa-user"></i>
+               </div> 
+            </div>
+
+            <div class="input col-sm">
+               <p class="input-name">Last name</p>
+               <div class="input-wrapper">
+               <%= form.text_field :last_name%>
+               <i class="fa-solid fa-user"></i>
+               </div> 
+            </div>
+            <div class="input col-sm">
+               <p class="input-name">Description</p>
+               <div class="input-wrapper">
+               <%= form.text_field :description, style:"height:70px; "%>
+               <i class="fa-solid fa-align-left"></i>
+               </div> 
+            </div>
+
+            <div class="input col-sm">
+               <p class="input-name">Adresse</p>
+               <div class="input-wrapper">
+               <%= form.text_field :address%>
+               <i class="fa-solid fa-address-book"></i>
+               </div> 
+            </div>
+
+            <div class="input col-sm">
+               <p class="input-name">City</p>
+               <div class="input-wrapper">
+               <%= form.select(:city_id, options_for_select(cities.collect{ |u| [u.name, u.id] }, user.city ? [user.city.name, user.city.id] : nil)) %>
+               <i class="fa-solid fa-location-dot"></i>
             </div> 
          </div>
-
-         <div class="input">
-            <p class="input-name">First name</p>
-            <div class="input-wrapper">
-            <%= form.text_field :first_name, autofocus: true%>
-            <i class="fa-solid fa-user"></i>
-            </div> 
-         </div>
-
-         <div class="input">
-            <p class="input-name">Last name</p>
-            <div class="input-wrapper">
-            <%= form.text_field :last_name%>
-            <i class="fa-solid fa-user"></i>
-            </div> 
-         </div>
-      </div>
-
-      <div class="user-info_wrapper">
-      <div class="input">
-         <p class="input-name">Description</p>
-         <div class="input-wrapper">
-         <%= form.text_field :description, style:"height:70px; "%>
-         <i class="fa-solid fa-align-left"></i>
-         </div> 
-      </div>
-
-      <div class="input">
-         <p class="input-name">Adresse</p>
-         <div class="input-wrapper">
-         <%= form.text_field :address%>
-         <i class="fa-solid fa-address-book"></i>
-         </div> 
-      </div>
-
-      <div class="input">
-         <p class="input-name">City</p>
-         <div class="input-wrapper">
-         <%= form.select(:city_id, options_for_select(cities.collect{ |u| [u.name, u.id] }, user.city ? [user.city.name, user.city.id] : nil)) %>
-         <i class="fa-solid fa-location-dot"></i>
-         </div> 
       </div>
       </div>
 
       <div class="input">
-         <div class="action">
-            <%= form.submit "Sauvegarder" %>
+      <div class="actions" style="margin:15px 0px 0px 13px">
+        <%= form.submit('Sauvegarder') %>
          </div>
       </div>  
    <% end %>
