--- a/app/views/users/performances/_climbing_edit_form.html.erb
+++ b/app/views/users/performances/_climbing_edit_form.html.erb
@@ -1,6 +1,9 @@
 <div class="flex-row-between-flex-start">
   <%=form_for :climbing_performances, url: climbing_performances_path, method: :post do |f|%>
-      <div class="input">
+
+    <div class="container">
+    <div class="row">
+      <div class="input col-sm">
         <p class="input-name">Experience</p>
         <div class="input-wrapper">
           <%= f.number_field :experience, value:user.get_sport_user("Climbing").experience ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
@@ -8,7 +11,7 @@
         </div> 
       </div>
 
-      <div class="input">
+      <div class="input col-sm">
         <p class="input-name">Frequence</p>
         <div class="input-wrapper">
           <%= f.number_field :frequency, value:user.get_sport_user("Climbing").frequency,placeholder: "Combien de fois par semaines en fait tu ?" %>
@@ -16,7 +19,7 @@
         </div> 
       </div>
       
-      <div class="input">
+      <div class="input col-sm">
         <p class="input-name">Level</p>
         <div class="input-wrapper">
           <%= f.select :level, options_for_select(ClimbingLevel.all.map{|level| level.level}, user.last_climbing_perf.level),placeholder: "Entrez votre niveau" %>
@@ -24,7 +27,7 @@
         </div> 
       </div>
 
-      <div class="input">
+      <div class="input col-sm">
         <p class="input-name">Block color</p>
         <div class="input-wrapper">
           <%= f.select :block_color, options_for_select(ClimbingBlockColor.all.map{|block| block.block_color}, user.last_climbing_perf.block_color) ,placeholder: "Rentrez votre couleur de block" %>
@@ -32,10 +35,12 @@
           <i class="fa-solid fa-paintbrush"></i>
         </div> 
       </div>
+      </div>
+      </div>
       
       <div class="input">
-      <div class="actions">
-        <%= f.submit('Soumettre') %>
+      <div class="actions" style="margin:15px 0px 0px 13px">
+        <%= f.submit('Sauvegarder') %>
       </div>
       </div>
     <%end%>
