--- a/app/views/users/performances/_tennis_edit_form.html.erb
+++ b/app/views/users/performances/_tennis_edit_form.html.erb
@@ -1,33 +1,37 @@
 <div class="flex-row-between-flex-start">
     <%=form_for :tennis_performances, url: tennis_performances_path, method: :post do |f|%>
-      <div class="input">
-        <p class="input-name">Experience</p>
-        <div class="input-wrapper">
-          <%= f.number_field :experience, value:user.get_sport_user("Tennis").experience ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
-          <i class="fa-solid fa-signal"></i>
-        </div> 
-      </div>
+      <div class="container">
+        <div class="row">
+          <div class="input col-sm">
+            <p class="input-name">Experience</p>
+            <div class="input-wrapper">
+              <%= f.number_field :experience, value:user.get_sport_user("Tennis").experience ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
+              <i class="fa-solid fa-signal"></i>
+            </div> 
+          </div>
 
-      <div class="input">
-        <p class="input-name">Frequence</p>
-        <div class="input-wrapper">
-          <%= f.number_field :frequency, value:user.get_sport_user("Tennis").frequency,placeholder: "Combien de fois par semaines en fait tu ?" %>
-          <i class="fa-solid fa-signal"></i>
-        </div> 
+          <div class="input col-sm">
+            <p class="input-name">Frequence</p>
+            <div class="input-wrapper">
+              <%= f.number_field :frequency, value:user.get_sport_user("Tennis").frequency,placeholder: "Combien de fois par semaines en fait tu ?" %>
+              <i class="fa-solid fa-signal"></i>
+            </div> 
+          </div>
+          
+          <div class="input col-sm">
+            <p class="input-name">Rang</p>
+            <div class="input-wrapper">
+              <%= f.select :rank, options_for_select(TennisRank.all.map{|rank| rank.rank} , user.last_tennis_perf.rank),placeholder: "Entrez votre niveau" %>
+              <i class="fa-solid fa-calendar-range"></i>
+            </div> 
+          </div>
+          <div class="input">
+            <div class="actions" style="margin:15px 0px 0px 1px">
+              <%= f.submit('Sauvegarder') %>
+            </div>
+          </div>
       </div>
-      
-      <div class="input">
-        <p class="input-name">Rang</p>
-        <div class="input-wrapper">
-          <%= f.select :rank, options_for_select(TennisRank.all.map{|rank| rank.rank} , user.last_tennis_perf.rank),placeholder: "Entrez votre niveau" %>
-          <i class="fa-solid fa-calendar-range"></i>
-        </div> 
-      </div>
-      <div class="input">
-        <div class="actions">
-          <%= f.submit('Soumettre') %>
-        </div>
-      </div>
+    </div>
     <%end%>
     <div > <%= image_tag "tennis.png" %> </div>
 </div>
