--- a/app/assets/stylesheets/atoms/forms.scss
+++ b/app/assets/stylesheets/atoms/forms.scss
@@ -18,6 +18,10 @@
       width: fit-content;
       height: fit-content;
 
+      input[type=number], select{
+         width: 225px !important;
+      }
+
 
       input[type=text], input[type=password], input[type=email], input[type=number], select {
          width: 450px;
@@ -30,6 +34,7 @@
          @media screen and (max-width: 1500px) {
             width: 400px;
             padding: 18px 0px;
+            padding-left: 15px;
          }
    
    
