--- a/app/views/users/performances/_workout_edit_form.html.erb
+++ b/app/views/users/performances/_workout_edit_form.html.erb
@@ -1,6 +1,8 @@
 <div class="flex-row-between-flex-start">
     <%=form_for :workout_performances, url: workout_performances_path, method: :post do |f|%>
-          <div class="input">
+      <div class="container">
+        <div class="row">
+          <div class="input col-sm">
             <p class="input-name">Experience</p>
             <div class="input-wrapper">
               <%= f.number_field :experience, value:user.get_sport_user("Workout").experience ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
@@ -8,7 +10,7 @@
             </div> 
           </div>
 
-          <div class="input">
+          <div class="input col-sm">
             <p class="input-name">Frequence</p>
             <div class="input-wrapper">
               <%= f.number_field :frequency, value:user.get_sport_user("Workout").frequency,placeholder: "Combien de fois par semaines en fait tu ?" %>
@@ -16,7 +18,7 @@
             </div> 
           </div>
           
-          <div class="input">
+          <div class="input col-sm">
             <p class="input-name">Benchpress</p>
             <div class="input-wrapper">
               <%= f.number_field :benchpress_weight, value:user.last_workout_perf.benchpress_weight , placeholder: "Rentrez votre vitesse" %>
@@ -24,17 +26,19 @@
             </div> 
           </div>
 
-          <div class="input">
+          <div class="input col-sm">
             <p class="input-name">Squat</p>
             <div class="input-wrapper">
-              <%= f.text_field :squat_weight, value:user.last_workout_perf.squat_weight,placeholder: "Rentrez votre nombre de squat" %>
+              <%= f.number_field :squat_weight, value:user.last_workout_perf.squat_weight,placeholder: "Rentrez votre nombre de squat" %>
              <i class="fa-solid fa-transporter"></i>
             </div> 
           </div>
+        </div>
+      </div>
           
           <div class="input">
-            <div class="actions">
-              <%= f.submit('Soumettre') %>
+            <div class="actions" style="margin:15px 0px 0px 13px">
+              <%= f.submit('Sauvegarder') %>
             </div>
           </div>
     <%end%>
