--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
   <body style="display:flex">
         <%= render 'layouts/navbar' %>
+         <%= render "layouts/alert" %>
         <%= yield%>
   </body>
 </html>
