--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,46 +1,39 @@
 <div class="container-dashboard">
-  
   <% if @user == current_user %>
-  <div class="wrapper-not-meteo">
-    <div class="notification-card card"></div>
-    <div class="meteo-card card"></div>
-  </div>
-  <%else%>
-      <div class="wrapper-not-meteo">
-    <div class="notification-card card">
-      <p>
-        <strong>First name:</strong>
-        <%= @user.first_name ? @user.first_name : 'Donnee non renseignée' %>
-      </p>
-      <p>
-        <strong>Last name:</strong>
-        <%= @user.last_name ? @user.last_name : 'Donnee non renseignée' %>
-      </p>
-    </div>
-    <div class="meteo-card card">
-      <p>
-        <strong>Description:</strong>
-        <%= @user.description ? @user.description : 'Donnee non renseignée' %>
-      </p>
-      <p>
-        <strong>Adresse:</strong>
-        <%= @user.address ? @user.address : 'Donnee non renseignée' %>
-      </p>
-      <p>
-        <strong>City:</strong>
-        <%= @user.city ? @user.city.name : 'Donnee non renseignée' %>
-      </p>
-    </div>
-  </div>
-  <%end%>
-    <%= render 'performance_usershow'%>
-
-  <p id="notice"><%= notice %></p>
-
-
-<div class="user-show-btn mt-2">
-  <%= link_to 'Edit', edit_user_path(@user), class:'button primary' %>
-  <%= link_to 'Back', users_path, class: 'button primary' %>
-</div>
-
+      <div class="edit-profil-btn">
+        <h1> Hello <%= current_user.first_name%> 👋🏻</h1> 
+        <%= link_to 'Modifie ton profil', edit_user_path(@user), class:'button primary' %>
+      </div>
+      <%= render 'users/notif-meteo/notif_meteo'%>
+    <%else%>
+    <h1> Profil de <%= @user.first_name%></h1>
+        <div class="wrapper-not-meteo">
+          <div class="notification-card card">
+            <p>
+              <strong>First name:</strong>
+              <%= @user.first_name ? @user.first_name : 'Donnee non renseignée' %>
+            </p>
+            <p>
+              <strong>Last name:</strong>
+              <%= @user.last_name ? @user.last_name : 'Donnee non renseignée' %>
+            </p>
+          </div>
+          <div class="meteo-card card">
+            <p>
+              <strong>Description:</strong>
+              <%= @user.description ? @user.description : 'Donnee non renseignée' %>
+            </p>
+            <p>
+              <strong>Adresse:</strong>
+              <%= @user.address ? @user.address : 'Donnee non renseignée' %>
+            </p>
+            <p>
+              <strong>City:</strong>
+              <%= @user.city ? @user.city.name : 'Donnee non renseignée' %>
+            </p>
+          </div>
+        </div>
+    <%end%>
+  
+  <%= render 'performance_usershow'%>
 </div>
