--- a/app/assets/stylesheets/atoms/forms.scss
+++ b/app/assets/stylesheets/atoms/forms.scss
@@ -15,7 +15,7 @@
       height: fit-content;
 
 
-      input[type=text], input[type=password], input[type=email], input[type=number], select {
+      input[type=text], input[type=password], input[type=email], input[type=number], textarea[type=text], select {
          width: 450px;
          border: 1px solid var(--border-grey);
          border-radius: 5px;
@@ -66,7 +66,3 @@
 input[type=checkbox]{
    cursor: pointer;
 }
-
-
-
-
