change lign title

--- a/app/views/static_pages/_sports_lp.html.erb
+++ b/app/views/static_pages/_sports_lp.html.erb
@@ -3,7 +3,7 @@
    <div class="title-container">
       <div class="twins">
          <h3 class="title"> Sports </h3>
-         <hr class= "title-lign">
+         <div class= "title-lign"></div>
       </div>   
          <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
          <div class="title-underline"> </div>
