--- a/app/views/static_pages/_contact_lp.html.erb
+++ b/app/views/static_pages/_contact_lp.html.erb
@@ -2,7 +2,7 @@
     <div class="title-container">
       <div class="twins">
          <h3 class="title"> Contact </h3>
-         <hr class= "title-lign">
+         <div class= "title-lign"></div>
       </div>   
          <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
          <div class="title-underline"> </div>
@@ -23,7 +23,6 @@
       </div>
     </div>
 
-    <!-- Message input -->
     <div class="input">
       <p class="input-name">Message</p>
       <div class="input-wrapper">
@@ -32,7 +31,6 @@
       </div>
     </div>
 
-    <!-- Form submit button -->
     <div class="input">
       <div class="action">
       <button class="button primary" type="submit">Envoyer</button>
