adding events link

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,6 +14,8 @@
                <%= render "layouts/tabs/friends_tab" %>
             <% elsif current_page?(edit_user_path(current_user))%>
                <%= render "layouts/tabs/edit_tab" %>
+            <% elsif current_page?(events_path)%>
+               <%= render "layouts/tabs/events_tab" %>
             <% else %>
                <%= render "layouts/tabs/inactive_tab" %>
             <% end%>
