--- a/app/views/layouts/tabs/tab_links/_events_active.html.erb
+++ b/app/views/layouts/tabs/tab_links/_events_active.html.erb
@@ -1,4 +1,4 @@
-<%= link_to home_path, 'aria-selected' => true do %>
+<%= link_to events_path, 'aria-selected' => true do %>
    <i class="fa-solid fa-calendar-days"></i> Events 
    <%= render "layouts/tabs/span_indicator" %>
  <% end%>
