--- a/app/views/users/_performance_usershow.html.erb
+++ b/app/views/users/_performance_usershow.html.erb
@@ -2,6 +2,7 @@
   <div class="nav flex-column nav-pills me-3 tabs-items" id="v-pills-tab" role="tablist" aria-orientation="vertical">
       <%# Ajout du 1er bouton en dur avec la classe 'active' et aria-selected=true%>
       <button class="nav-link active" id="v-pills-<%= @user.sports[0].id%>-tab" data-bs-toggle="pill" data-bs-target="#v-pills-<%= @user.sports[0].id%>" type="button" role="tab" aria-controls="v-pills-<%= @user.sports[0].id%>" aria-selected="true"><%= @user.sports[0].name%></button>
+      <%# Je drop le 1er élément pour éviter la répétition%>
      <% @user.sports.drop(1).each do |sport| %>
             <button class="nav-link" id="v-pills-<%= sport.id%>-tab" data-bs-toggle="pill" data-bs-target="#v-pills-<%= sport.id%>" type="button" role="tab" aria-controls="v-pills-<%= sport.id%>" aria-selected="false"><%= sport.name%></button>
      <%end%>
