--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,8 +12,6 @@
       <th>Description</th>
       <th>Date</th>
       <th>Address</th>
-      <th>Longitude</th>
-      <th>Latitude</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,15 +19,13 @@
   <tbody>
     <% @events.each do |event| %>
       <tr>
-        <td><%= event.admin %></td>
-        <td><%= event.sport %></td>
-        <td><%= event.city %></td>
+        <td><%= event.admin.full_name %></td>
+        <td><%= event.sport.name %></td>
+        <td><%= event.city.name %></td>
         <td><%= event.title %></td>
         <td><%= event.description %></td>
         <td><%= event.date %></td>
-        <td><%= event.address %></td>
-        <td><%= event.longitude %></td>
-        <td><%= event.latitude %></td>
+        <td><%= event.full_address %></td>
         <td><%= link_to 'Show', event %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
