--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Event</h1>
 
-<%= render 'form', event: @event %>
+<%= render partial: 'form', locals:{ event: @event, cities: @cities, sports: @sports} %>
 
 <%= link_to 'Back', events_path %>
