--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,11 +7,11 @@
     <tr>
       <th>Admin</th>
       <th>Sport</th>
-      <th>City</th>
+      <th>Ville</th>
       <th>Title</th>
       <th>Description</th>
       <th>Date</th>
-      <th>Address</th>
+      <th>Addresse</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,9 +26,9 @@
         <td><%= event.description %></td>
         <td><%= event.date %></td>
         <td><%= event.full_address %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Afficher', event %></td>
+        <td><%= link_to 'Editer', edit_event_path(event) %></td>
+        <td><%= link_to 'Supprimer', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
