--- a/app/views/users/performances/_climbing_edit_form.html.erb
+++ b/app/views/users/performances/_climbing_edit_form.html.erb
@@ -4,7 +4,7 @@
     <div class="container">
     <div class="row">
       <div class="input col-sm">
-        <p class="input-name">Experience</p>
+        <p class="input-name">Experience (années)</p>
         <div class="input-wrapper">
         <%if user.get_sport_user("Climbing") %>
           <%= f.number_field :experience, value:user.get_sport_user("Climbing").experience ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
@@ -16,7 +16,7 @@
       </div>
 
       <div class="input col-sm">
-        <p class="input-name">Frequence</p>
+        <p class="input-name">Frequence (par semaine)</p>
         <div class="input-wrapper">
             <% if user.get_sport_user("Climbing") %>
               <%= f.number_field :frequency, value:user.get_sport_user("Climbing").frequency ,placeholder: "Depuis combien d'année pratique tu ce sport ?" %>
