--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,6 +34,7 @@
           </div>
         </div>
     <%end%>
-  
-  <%= render 'performance_usershow'%>
+  <%if @user.sports.present?%>
+    <%= render 'performance_usershow'%>
+  <%end%>
 </div>
