testimonies landing page front

--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -5,6 +5,7 @@
       <%= render 'features_lp'%>
       <%= render 'sports_lp'%>
       <%= render 'convinced_lp'%>
+      <%= render 'testimonies_lp' %>
       <%= render 'contact_lp' %>
       <%= render 'footer_lp' %>
    </div>
