--- a/app/assets/stylesheets/atoms/buttons.scss
+++ b/app/assets/stylesheets/atoms/buttons.scss
@@ -15,13 +15,6 @@
       }
    }
    
-   .outlined{
-      border: 1px solid;
-      background-color: transparent;
-      padding: 4px 13px !important;
-      font-size: 0.8rem !important;
-   }
-   
    .primary{
       background-color: rgb(var(--purple));
       color: rgb(var(--white));
@@ -29,28 +22,35 @@
    .primary:hover{
       background-color: rgba(var(--purple), 0.8);
    }
+
    
-   .primary-outlined{
-      border-color: rgb(var(--purple));
-      color: rgb(var(--purple));
+   .secondary{
+      padding: 7px 12px !important;
+      background-color: rgb(var(--green));
    }
-   
-   .primary-outlined:hover{
-      background-color: rgb(var(--purple));
-      color: rgb(var(--white));
-   }
-   
-   .primary{
-      background-color: rgb(var(--purple));
+   .secondary:hover{
+      padding: 7px 12px !important;
+      background-color: rgba(var(--green), 0.8);
    }
 
+   .delete-btn{
+      background-color: rgb(var(--warning));
+   }
+
+   .refuse-btn{
+      background-color: var(--grey-bg);
+      color: black
+   }
+
+   .refuse-btn:hover{
+      background-color: rgb(214, 214, 214);
+      color: black !important
+   }
+
+   // SPACING
    .button-row{
       display: flex;
       justify-content: center;
       align-items: center;
       gap: 8px;
-   }
-
-   .delete-btn{
-      background-color: rgb(var(--warning));
    }
