--- a/app/assets/stylesheets/pages/connections/suggestions_list.scss
+++ b/app/assets/stylesheets/pages/connections/suggestions_list.scss
@@ -6,5 +6,12 @@
 }
 
 .container-suggestions-list{
-   flex: 4;
+   flex: 5;
+
+   .suggest-friends{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+   }
 }
