--- a/app/views/connections/_friend_list.html.erb
+++ b/app/views/connections/_friend_list.html.erb
@@ -4,14 +4,14 @@
    <p class="card-icon"> <i class="fa-solid fa-bell"></i> </p> 
    <div class="friends-list">
   <ul>
-   <% if current_user.friends == 0%>
-      <p> tu n'as pas d'amis </p>
+   <% if current_user.friends.length == 0%>
+         <p> tu n'as pas encore d'amis, ajoute des suggestions ! </p>
    <%else%>
-    <% current_user.friends.each do |friend|%>
-      <li>
-        <%= link_to friend.full_name, controller: "users", action: "show", id: friend.id %>
-      </li>
-    <%end%>
+      <% current_user.friends.each do |friend|%>
+         <li>
+         <%= link_to friend.full_name, controller: "users", action: "show", id: friend.id %>
+         </li>
+      <%end%>
     <%end%>
   </ul>
 </div>
