modif landing page

--- a/app/assets/stylesheets/atoms/forms.scss
+++ b/app/assets/stylesheets/atoms/forms.scss
@@ -30,6 +30,7 @@
          padding: 20px 0px;
          padding-left: 15px;
          transition: all 0.3s ease;
+         resize: none;
 
          @media screen and (max-width: 1500px) {
             width: 400px;
