--- a/app/views/static_pages/_contact_lp.html.erb
+++ b/app/views/static_pages/_contact_lp.html.erb
@@ -1,10 +1,10 @@
-<div class="features-wrapper">
+<div class="contact-wrapper">
     <div class="title-container">
       <div class="twins">
          <h3 class="title"> Contact </h3>
          <div class= "title-lign"></div>
       </div>   
-         <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+         <p class="para"> Contactez-nous pour avoir des informations ou nous donner votre avis</p>
          <div class="title-underline"> </div>
     </div>
 
