--- a/app/views/static_pages/_features_lp.html.erb
+++ b/app/views/static_pages/_features_lp.html.erb
@@ -1,8 +1,11 @@
 <div class="features-wrapper">
    <div class="title-container">
+   <div class="twins">
       <h3 class="title"> Features </h3>
-      <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
-      <div class="title-underline"> </div>
+      <div class="title-lign"></div>
+   </div>   
+      <p class="para"> Nous vous présentons tout ce que vous pouvez faire sur notre site !</p>
+      
    </div>
 
    <div class="feature">
