--- a/app/views/static_pages/_sports_lp.html.erb
+++ b/app/views/static_pages/_sports_lp.html.erb
@@ -1,11 +1,11 @@
-<div class="features-wrapper">
+<div class="sports-wrapper">
 
    <div class="title-container">
       <div class="twins">
          <h3 class="title"> Sports </h3>
          <div class= "title-lign"></div>
       </div>   
-         <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+         <p class="para"> Voici tout les sports proposés sur le site</p>
          <div class="title-underline"> </div>
       </div>
 
