--- a/app/views/static_pages/_testimonies_lp.html.erb
+++ b/app/views/static_pages/_testimonies_lp.html.erb
@@ -4,7 +4,7 @@
          <h3 class="title"> Témoignages </h3>
          <div class= "title-lign"></div>
       </div>   
-         <p class="para"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
+         <p class="para"> Quelques témoignages de la part de nos utilisateurs les plus fidèles </p>
          <div class="title-underline"> </div>
     </div>
 
@@ -21,7 +21,7 @@
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star"></span>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum </p>
+            <p>Une très belle expérience, l'un des meilleur site que j'ai pu voir et utiliser de toute ma vie. J'ai fais de très belles rencontres sportives et je me suis dépassée</p>
          </div>
 
          <div class="cardy cardy-2">
@@ -34,7 +34,7 @@
                   <span class="fa fa-star checked"></span>
                   <span class="fa fa-star checked"></span>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum </p>
+            <p> Vraiment Génial ! J'ai pu faire énormément de sport en duo et en trio je recommande fortement ce site, j'ai aussi passé de très bonne 3ème mi-temps 🍺</p>
          </div>
 
          <div class="cardy cardy-3">
@@ -47,7 +47,7 @@
                <span class="fa fa-star checked"></span>
                <span class="fa fa-star"></span>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum </p>
+            <p> Waouuuw je n'ai jamais vu un site aussi bien réussi en terme de design et d'utilisation, je le recommande à toutes les personnes qui veulent faire du sport à plusieurs, AMAZING!! </p>
          </div>
 
          <div class="cardy cardy-4">
@@ -60,7 +60,7 @@
                   <span class="fa fa-star"></span>
                   <span class="fa fa-star"></span>
              </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum </p>
+            <p> J'aime bien! Cependant j'ai eu un coach très dur avec moi, certes il voulait me faire progresser mais ça allait trop vite pour moi, il n'a pas su appréhender mon niveau, mais je recommande ce site !</p>
          </div>
 
          <div class="cardy cardy-5">
@@ -73,7 +73,7 @@
                <span class="fa fa-star checked"></span>
                <span class="fa fa-star checked"></span>
          </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodLorem ipsum </p>
+            <p> INCROYABLE !! J'ai pu faire du sport avec des personnes vraiment cool et sociable, de très belles rencontres et de grosses séances de sport, j'attends la prochaine avec plus d'impatience que le prochain scan de One Piece !</p>
          </div>
     </div>
 </div>    
