--- a/app/assets/stylesheets/pages/landing-page/testimonies.scss
+++ b/app/assets/stylesheets/pages/landing-page/testimonies.scss
@@ -47,7 +47,7 @@
          padding-left: 6px;
       }
       .checked {
-         color: yellow;
+         color: rgba(255, 255, 0, 0.542);
       }
    }
 
