--- a/app/assets/stylesheets/atoms/map.scss
+++ b/app/assets/stylesheets/atoms/map.scss
@@ -5,19 +5,30 @@
 }
 
 .marker {
-  background-image: url('https://play-lh.googleusercontent.com/eNustQYcjMXlZAteHQmdB6E2r0-E0cl3utGPvO51ZC-50rhqkYFTuhVp4ip_tZL-la8=w240-h480-rw');
+  background-image: url('pointer.png');
   background-size: cover;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 53px;
   border-radius: 50%;
   cursor: pointer;
 }
 
 .mapboxgl-popup {
 max-width: 200px;
+
 }
 
 .mapboxgl-popup-content {
+  padding: 20px 25px 20px 15px;
 text-align: center;
 font-family: 'Open Sans', sans-serif;
+
+  h2{
+    font-size: 1.1rem;
+    font-family: var(--black-font);
+  }
+
+  h3{
+
+  }
 }
